# Water-Quality-Prediction

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  pyproject.toml
tests/: test_data_handling.py
waterquality/: config.py  data_handling.py  pipeline.py  predict.py
